[project]
name = "number-placement-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido==0.2.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.5",
    "snakeviz>=2.2.2",
]
